tests/snapshots/snapshot_tests__create_table__simple_table.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Create table public.users
CREATE TABLE public.users (
    id integer,
    name text,
    email text
);
