tests/snapshots/snapshot_tests__create_table__table_with_identity_column.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Create table public.users
CREATE TABLE public.users (
    id integer NOT NULL GENERATED ALWAYS AS IDENTITY,
    name text,
    CONSTRAINT users_pkey PRIMARY KEY (id)
);
