tests/snapshots/snapshot_tests__create_table__table_with_not_null_columns.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Create table public.users
CREATE TABLE public.users (
    id integer NOT NULL,
    name text NOT NULL,
    bio text
);
